# lib/api-spec/openapi.yaml
@@ -726,6 +726,15 @@ components:
           type: string
           enum: [nao, sim, suporte]
           default: nao
+        excluded:
+          type: boolean
+          default: false
+        customInternalPlatform:
+          type: ["string", "null"]
+        businessRuleExpression:
+          type: ["string", "null"]
+        businessRuleSql:
+          type: ["string", "null"]
 
     ExportResult:
       type: object
